--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 04.12.19 19:13
+  ~ Last modified 15.12.19 16:06
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -46,11 +46,14 @@
 
 	<TextView
 		android:id="@+id/tvSignedInUserName"
-		style="@style/regular_text_white_20sp_85op"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:layout_margin="@dimen/general_margin_16"
+
 		android:text="@string/default_name"
+		android:textSize="20sp"
+		style="@style/regular_text_white85op"
+
 		app:layout_constraintEnd_toStartOf="@+id/arrow_down"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
