--- a/app/src/main/res/xml/motion_registration.xml
+++ b/app/src/main/res/xml/motion_registration.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 14.12.19 19:47
+  ~ Last modified 15.12.19 19:36
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -12,6 +12,13 @@
 <MotionScene
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto">
+
+
+	<Transition
+		app:constraintSetStart="@id/base"
+		app:constraintSetEnd="@id/step_1"
+		app:duration="500"
+		app:motionInterpolator="easeInOut"/>
 
 	<Transition
 		app:constraintSetStart="@id/step_1"
@@ -23,21 +30,83 @@
 		app:constraintSetStart="@id/step_2"
 		app:constraintSetEnd="@id/step_3"
 		app:duration="500"
-		app:motionInterpolator="easeIn"/>
+		app:motionInterpolator="easeInOut"/>
+
+	<Transition
+		app:constraintSetStart="@id/step_3"
+		app:constraintSetEnd="@id/step_4"
+		app:duration="500"
+		app:motionInterpolator="easeOut"/>
 
 
-	<!-- if not specify this transition it won't change states with transition while moving back -->
+	<!-- backwards compatibilities -->
 	<Transition
 		app:constraintSetStart="@id/step_2"
 		app:constraintSetEnd="@id/step_1"
 		app:duration="500"
-		app:motionInterpolator="easeIn"/>
+		app:motionInterpolator="easeInOut"/>
 
+	<Transition
+		app:constraintSetStart="@id/step_3"
+		app:constraintSetEnd="@id/step_2"
+		app:duration="500"
+		app:motionInterpolator="easeInOut"/>
+
+
+	<ConstraintSet android:id="@+id/base">
+
+		<Constraint
+			android:id="@+id/tvSelectGender"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+
+			android:alpha="0"
+			android:rotationX="90"
+
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintHorizontal_bias="0.1"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintVertical_bias="0.2" />
+
+		<Constraint
+			android:id="@+id/btnGenderMale"
+			android:layout_width="0dp"
+			android:layout_height="180dp"
+			android:layout_marginEnd="@dimen/general_margin_8"
+
+			android:alpha="0"
+			android:rotationX="-90"
+			android:rotationY="90"
+
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toStartOf="@id/btnGenderFemale"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toBottomOf="@id/tvSelectGender"
+			app:layout_constraintVertical_bias="0.3" />
+
+		<Constraint
+			android:id="@+id/btnGenderFemale"
+			android:layout_width="0dp"
+			android:layout_height="180dp"
+
+			android:alpha="0"
+			android:rotationX="-90"
+			android:rotationY="90"
+
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toEndOf="@id/btnGenderMale"
+			app:layout_constraintTop_toBottomOf="@id/tvSelectGender"
+			app:layout_constraintVertical_bias="0.3" />
+
+	</ConstraintSet>
 
 	<ConstraintSet android:id="@+id/step_1">
 
 		<Constraint
-			android:id="@+id/tv_reg_1"
+			android:id="@+id/tvSelectGender"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 
@@ -51,21 +120,6 @@
 			app:layout_constraintVertical_bias="0.2" />
 
 		<Constraint
-			android:id="@+id/tv_reg_2"
-			android:layout_width="0dp"
-			android:layout_height="wrap_content"
-			android:layout_marginBottom="24dp"
-
-			android:alpha="0"
-			android:rotationX="-90"
-
-			app:layout_constraintBottom_toTopOf="@id/btnGenderMale"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintHorizontal_bias="0.1"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toTopOf="parent" />
-
-		<Constraint
 			android:id="@+id/btnGenderMale"
 			android:layout_width="0dp"
 			android:layout_height="180dp"
@@ -74,7 +128,7 @@
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toStartOf="@id/btnGenderFemale"
 			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toBottomOf="@id/tv_reg_1"
+			app:layout_constraintTop_toBottomOf="@id/tvSelectGender"
 			app:layout_constraintVertical_bias="0.3" />
 
 		<Constraint
@@ -85,48 +139,19 @@
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toEndOf="@id/btnGenderMale"
-			app:layout_constraintTop_toBottomOf="@id/tv_reg_1"
+			app:layout_constraintTop_toBottomOf="@id/tvSelectGender"
 			app:layout_constraintVertical_bias="0.3" />
-
-		<Constraint
-			android:id="@+id/btnGenderEveryone"
-			android:layout_width="0dp"
-			android:layout_height="0dp"
-			android:layout_marginBottom="24dp"
-
-			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintStart_toStartOf="parent" />
-
 
 	</ConstraintSet>
 
 	<ConstraintSet android:id="@+id/step_2">
 
 		<Constraint
-			android:id="@+id/tv_reg_1"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_marginBottom="24dp"
-
-			android:alpha="0"
-			android:rotationX="90"
-
-			app:layout_constraintBottom_toTopOf="@id/btnGenderMale"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toTopOf="parent"
-			app:layout_constraintHorizontal_bias="0.1"
-			app:layout_constraintVertical_bias="0.2"/>
-
-		<Constraint
-			android:id="@+id/tv_reg_2"
+			android:id="@+id/tvInterested"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginBottom="24dp"
 			android:layout_marginTop="50dp"
-
-			android:alpha="1"
 
 			app:layout_constraintBottom_toTopOf="@id/btnGenderMale"
 			app:layout_constraintEnd_toEndOf="parent"
@@ -142,7 +167,7 @@
 			app:layout_constraintBottom_toTopOf="@id/btnGenderFemale"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toBottomOf="@id/tv_reg_2" />
+			app:layout_constraintTop_toBottomOf="@id/tvInterested" />
 
 		<Constraint
 			android:id="@+id/btnGenderFemale"
@@ -161,10 +186,11 @@
 			android:layout_height="0dp"
 			android:layout_marginBottom="24dp"
 
-			app:layout_constraintBottom_toTopOf="@id/btnRegistrationNext"
+			app:layout_constraintTop_toBottomOf="@id/btnGenderFemale"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toBottomOf="@id/btnGenderFemale" />
+			app:layout_constraintBottom_toTopOf="@id/btnRegistrationNext"
+			/>
 
 		<!-- fab -->
 		<Constraint
@@ -185,34 +211,6 @@
 	<ConstraintSet android:id="@+id/step_3">
 
 		<Constraint
-			android:id="@+id/tv_reg_2"
-			android:layout_width="0dp"
-			android:layout_height="wrap_content"
-			android:layout_marginBottom="24dp"
-
-			android:alpha="0"
-			android:rotationX="-90"
-
-			app:layout_constraintBottom_toTopOf="@id/btnGenderMale"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintHorizontal_bias="0.1"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toTopOf="parent" />
-
-		<Constraint
-			android:id="@+id/tv_reg_3"
-			android:layout_width="0dp"
-			android:layout_height="wrap_content"
-			android:layout_marginBottom="24dp"
-
-			android:alpha="1"
-
-			app:layout_constraintBottom_toTopOf="@id/sliderAge"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toTopOf="parent" />
-
-		<Constraint
 			android:id="@+id/btnGenderMale"
 			android:layout_width="0dp"
 			android:layout_height="0dp"
@@ -223,7 +221,7 @@
 			app:layout_constraintBottom_toTopOf="@id/btnGenderFemale"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toBottomOf="@id/tv_reg_2" />
+			app:layout_constraintTop_toBottomOf="@id/tvInterested" />
 
 		<Constraint
 			android:id="@+id/btnGenderFemale"
@@ -232,6 +230,7 @@
 
 			android:alpha="0"
 			android:rotationX="-90"
+			android:rotationY="90"
 
 			app:layout_constraintBottom_toTopOf="@id/btnGenderEveryone"
 			app:layout_constraintEnd_toEndOf="parent"
@@ -240,18 +239,17 @@
 			/>
 
 		<Constraint
-			android:id="@+id/btnGenderEveryone"
+			android:id="@+id/tvSpecifyAge"
 			android:layout_width="0dp"
-			android:layout_height="0dp"
+			android:layout_height="wrap_content"
 			android:layout_marginBottom="24dp"
 
-			android:alpha="0"
-			android:rotationX="-90"
-
-			app:layout_constraintBottom_toTopOf="@id/btnRegistrationNext"
+			app:layout_constraintBottom_toTopOf="@id/sliderAge"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toBottomOf="@id/btnGenderFemale" />
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintVertical_bias="0.7"
+			/>
 
 		<Constraint
 			android:id="@+id/sliderAge"
@@ -260,14 +258,54 @@
 			android:layout_marginStart="@dimen/general_margin_8"
 			android:layout_marginEnd="@dimen/general_margin_8"
 
-			android:alpha="1"
-
-			app:layout_constraintBottom_toTopOf="@id/btnGenderEveryone"
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toBottomOf="@id/btnGenderMale"
-			app:layout_constraintVertical_bias="0.75"
+			app:layout_constraintVertical_bias="0.6"
 			/>
+
+	</ConstraintSet>
+
+	<ConstraintSet android:id="@+id/step_4">
+
+		<Constraint
+			android:id="@+id/tvChangeName"
+			android:layout_width="0dp"
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="24dp"
+
+			app:layout_constraintBottom_toTopOf="@id/sliderAge"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent" />
+
+		<Constraint
+			android:id="@+id/layoutInputChangeName"
+			android:layout_width="0dp"
+			android:layout_height="wrap_content"
+
+			android:gravity="center"
+
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toBottomOf="@id/tvChangeName"
+			app:layout_constraintVertical_bias="0.3" />
+
+		<!-- fab -->
+		<Constraint
+			android:id="@+id/btnRegistrationNext"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="@dimen/general_margin_16"
+
+			android:rotationY="360"
+
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintHorizontal_bias="0.8" />
 
 	</ConstraintSet>
 
