--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 15.12.19 16:06
+  ~ Last modified 16.12.19 19:03
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -28,7 +28,7 @@
 		<item name="colorSurface">@color/colorSurface</item>
 		<item name="colorOnSurface">@color/colorOnSurface</item>
 
-<!--		<item name="colorAccent">@color/colorAccent</item>-->
+		<item name="colorAccent">@color/colorAccent</item>
 
 		<item name="android:colorBackground">@color/black</item>
 		<item name="colorOnBackground">@color/white</item>
