--- a/app/src/main/res/xml/motion_registration.xml
+++ b/app/src/main/res/xml/motion_registration.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 15.12.19 19:36
+  ~ Last modified 16.12.19 20:26
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -38,6 +38,12 @@
 		app:duration="500"
 		app:motionInterpolator="easeOut"/>
 
+	<Transition
+		app:constraintSetStart="@id/step_4"
+		app:constraintSetEnd="@id/step_5"
+		app:duration="500"
+		app:motionInterpolator="easeIn"/>
+
 
 	<!-- backwards compatibilities -->
 	<Transition
@@ -49,6 +55,12 @@
 	<Transition
 		app:constraintSetStart="@id/step_3"
 		app:constraintSetEnd="@id/step_2"
+		app:duration="500"
+		app:motionInterpolator="easeInOut"/>
+
+	<Transition
+		app:constraintSetStart="@id/step_4"
+		app:constraintSetEnd="@id/step_3"
 		app:duration="500"
 		app:motionInterpolator="easeInOut"/>
 
@@ -122,10 +134,10 @@
 		<Constraint
 			android:id="@+id/btnGenderMale"
 			android:layout_width="0dp"
-			android:layout_height="180dp"
+			android:layout_height="220dp"
 			android:layout_marginEnd="@dimen/general_margin_8"
 
-			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintBottom_toTopOf="@id/btnRegistrationNext"
 			app:layout_constraintEnd_toStartOf="@id/btnGenderFemale"
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintTop_toBottomOf="@id/tvSelectGender"
@@ -134,9 +146,9 @@
 		<Constraint
 			android:id="@+id/btnGenderFemale"
 			android:layout_width="0dp"
-			android:layout_height="180dp"
+			android:layout_height="220dp"
 
-			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintBottom_toTopOf="@id/btnRegistrationNext"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toEndOf="@id/btnGenderMale"
 			app:layout_constraintTop_toBottomOf="@id/tvSelectGender"
@@ -275,15 +287,17 @@
 			android:layout_height="wrap_content"
 			android:layout_marginBottom="24dp"
 
-			app:layout_constraintBottom_toTopOf="@id/sliderAge"
+			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toTopOf="parent" />
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintVertical_bias="0.4" />
 
 		<Constraint
 			android:id="@+id/layoutInputChangeName"
 			android:layout_width="0dp"
 			android:layout_height="wrap_content"
+			android:padding="8dp"
 
 			android:gravity="center"
 
@@ -306,6 +320,35 @@
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintHorizontal_bias="0.8" />
+
+	</ConstraintSet>
+
+	<ConstraintSet android:id="@+id/step_5">
+
+		<Constraint
+			android:id="@+id/tvChooseYourCity"
+			android:layout_width="0dp"
+			android:layout_height="wrap_content"
+
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintVertical_bias="0.4" />
+
+
+		<Constraint
+			android:id="@+id/dropdownCityChooserContainer"
+			android:layout_width="0dp"
+			android:layout_height="wrap_content"
+
+			style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toBottomOf="@id/tvChooseYourCity"
+			app:layout_constraintVertical_bias="0.3" />
+
 
 	</ConstraintSet>
 
